--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.mail.properties.mail.debug=true
 #spring.security.user.name=admin
 
 storage.path=/home/emin/Desktop/STORAGE
+
+sms.aero.email=sambufer200@gmail.com
+sms.aero.api-key=9JzKdKTOK4ZOdylxKMc5n8PpxnV
+sms.aero.from=biznes
+sms.aero.type=7
+sms.aero.url=https://gate.smsaero.ru/send/
