--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ sms.aero.api-key=9JzKdKTOK4ZOdylxKMc5n8PpxnV
 sms.aero.from=biznes
 sms.aero.type=7
 sms.aero.url=https://gate.smsaero.ru/send/
+
+spring.datasource.initialization-mode=always
+spring.session.store-type=jdbc
